Fixed footer jump in Modernized and Basic theme
Added min-height of 620px to moin-content for both themes

--- a/MoinMoin/themes/basic/static/custom-less/theme.less
+++ b/MoinMoin/themes/basic/static/custom-less/theme.less
@@ -336,6 +336,8 @@ html, body {
 }
 .moin-content {
   padding-bottom: 10%;
+  min-height: 620px;
+
 }
 .moin-search-option-bar {
   padding-left: 10px;
