--- a/MoinMoin/themes/modernized/static/custom-less/theme.less
+++ b/MoinMoin/themes/modernized/static/custom-less/theme.less
@@ -121,6 +121,8 @@ padding-left: 10px;
 
 .moin-body{
   .row;
+  min-height: 620px;
+
 }
 
 
